<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avatar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_name_account_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_font_size_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatar"
            tools:text="Aref Yazdkhasti" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_email_account_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="@dimen/large_font_size_20sp"
            app:layout_constraintEnd_toEndOf="@+id/txt_name_account_fragment"
            app:layout_constraintStart_toStartOf="@+id/txt_name_account_fragment"
            app:layout_constraintTop_toBottomOf="@+id/txt_name_account_fragment"
            tools:text="aref@gmail.com" />

        <!--<androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_logout" />-->

        <com.example.nikeshop.View.CoustomView.CustomDetail
            android:id="@+id/favourite_layout_account_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            app:icon="@drawable/ic_favorite_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_email_account_fragment"
            app:text="@string/favourites" />

        <com.example.nikeshop.View.CoustomView.CustomDetail
            android:id="@+id/comment_layout_account_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:icon="@drawable/ic_comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favourite_layout_account_fragment"
            app:text="@string/your_comment" />

        <com.example.nikeshop.View.CoustomView.CustomDetail
            android:id="@+id/your_previously_bought_layout_account_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_shopping_basket"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comment_layout_account_fragment"
            app:text="@string/your_previously_bought" />

        <com.example.nikeshop.View.CoustomView.CustomDetail
            android:id="@+id/question_layout_account_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:icon="@drawable/ic_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/your_previously_bought_layout_account_fragment"
            app:text="@string/questions" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>