<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="@dimen/extra_large_margin_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_add_comment" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:boxCornerRadiusTopEnd="@dimen/standard_margin_8dp"
        app:boxCornerRadiusTopStart="@dimen/standard_margin_8dp"
        app:boxCornerRadiusBottomEnd="@dimen/standard_margin_8dp"
        app:boxCornerRadiusBottomStart="@dimen/standard_margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/appCompatImageView"
        android:layout_marginStart="@dimen/standard_margin_8dp"
        android:layout_marginEnd="@dimen/standard_margin_8dp"
        android:layout_marginTop="@dimen/standard_margin_8dp"
        android:hint="@string/Comment_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_comment_title_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextField2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:boxCornerRadiusTopEnd="@dimen/standard_margin_8dp"
        app:boxCornerRadiusTopStart="@dimen/standard_margin_8dp"
        app:boxCornerRadiusBottomEnd="@dimen/standard_margin_8dp"
        app:boxCornerRadiusBottomStart="@dimen/standard_margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/filledTextField"
        android:layout_marginStart="@dimen/standard_margin_8dp"
        android:layout_marginEnd="@dimen/standard_margin_8dp"
        android:layout_marginTop="@dimen/standard_margin_8dp"
        android:hint="@string/comment_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_comment_content_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send_comment_dialog"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:text="@string/send_comment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filledTextField2" />
</androidx.constraintlayout.widget.ConstraintLayout>